// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pairings utils getNextRoundPairings should get next round pairings 1`] = `
Array [
  Object {
    "playerIds": Array [
      0,
      2,
    ],
  },
  Object {
    "playerIds": Array [
      1,
      3,
    ],
  },
]
`;

exports[`pairings utils getPairings should pair last person as a bye 1`] = `
Array [
  Object {
    "playerIds": Array [
      0,
      1,
    ],
  },
  Object {
    "playerIds": Array [
      2,
    ],
  },
]
`;

exports[`pairings utils getPairings should properly get pairings 1`] = `
Array [
  Object {
    "playerIds": Array [
      0,
      1,
    ],
  },
  Object {
    "playerIds": Array [
      2,
      3,
    ],
  },
]
`;

exports[`pairings utils getPairingsGraph should compute initial pairings graph to be random 1`] = `
Array [
  Array [
    1,
    8,
  ],
  Array [
    2,
    7,
  ],
  Array [
    3,
    6,
  ],
  Array [
    4,
    5,
  ],
]
`;

exports[`pairings utils getPairingsGraph should correctly pair players in the same match point tier 1`] = `
Array [
  Array [
    0,
    1,
  ],
  Array [
    2,
    5,
  ],
  Array [
    3,
    4,
  ],
  Array [
    6,
    7,
  ],
]
`;
